# contentunderstanding

./: .env.example  .gitignore  README.md  architecture-mermaid.mmd  architecture.md  architecture2-mermaid.mmd  architecture2.md  architecture3-mermaid.mmd  architecture4-high.mmd  architecture4-mermaid.mmd  architecture4.md  main.py  pyproject.toml  results.jsonl  technicaloverview.md
.github/: copilot-instructions.md
config/doc_type_rules/: add_dependent_health.yaml  marriage.yaml  new_hire.yaml
config/doc_types/: birth_certificate.yaml  marriage_certificate.yaml
docs/: hackathon.md  promptguidance.md  scaleup.md
planningdocs/: m1-scaffold-contracts.prompt.md  m2-ingestion.prompt.md  m3-extraction.prompt.md  m4-form-analyzer.prompt.md  m5-attachment-classifier.prompt.md  m6-validator-registry.prompt.md  m7-marriage-cert-agent.prompt.md  m7-validation-testing.prompt.md  m8-orchestrator-cli.prompt.md  open-questions.md  plan.md
samples/submission_001/: attachment.pdf.extracted.json  form.pdf.extracted.json  form_event_change_app.pdf.docintell.extracted.json  marriagecertdone.pdf.docintell.extracted.json  metadata.json
samples/submission_002/: formaddpersontohealthplan.pdf.docintell.extracted.json  formaddpersontohealthplan.pdf.mock.extracted.json  tennessee_marriage_license.pdf.docintell.extracted.json  (+1 more)
src/: models.py  orchestrator.py  result_writer.py
tests/: test_classification.py  test_doc_type_config.py  test_doc_type_rule_config.py  test_extraction.py  test_form_type_config.py  test_ingestion.py  test_models.py  test_pipeline.py  test_validators.py
(+24 files in other folders)
